fixed white bars in notch area on ios

--- a/src/components/Pages/About/About.css
+++ b/src/components/Pages/About/About.css
@@ -75,6 +75,6 @@ h1 {
   }
 
   .about-text > p {
-    font-size: 1rem;
+    font-size: 1.1rem;
   }
 }
