--- a/src/components/Pages/Contact/Contact.css
+++ b/src/components/Pages/Contact/Contact.css
@@ -1,5 +1,6 @@
 .contact-section {
   height: 100%;
+  width: 100%;
   background-color: black;
 }
 
