--- a/src/components/Pages/Footer/Footer.css
+++ b/src/components/Pages/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer-section {
   height: 100%;
+  width: 100%;
   background-color: black;
 }
 
