--- a/src/components/Pages/Music/Music.css
+++ b/src/components/Pages/Music/Music.css
@@ -1,6 +1,7 @@
 /* ---------- start intro section ---------- */
 .music-section {
   height: 100%;
+  width: 100%;
   background-color: black;
 }
 
