--- a/src/components/Pages/Projects/Projects.css
+++ b/src/components/Pages/Projects/Projects.css
@@ -1,5 +1,6 @@
 .project-section {
   height: 100%;
+  width: 100%;
   background-color: black;
 }
 
